updated colab add members logic

--- a/app/src/main/res/layout/fragment_add_new_project.xml
+++ b/app/src/main/res/layout/fragment_add_new_project.xml
@@ -101,7 +101,7 @@
                     <RelativeLayout
                         android:background="@color/colorwhite"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="match_parent">
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/members_recyclerview"
@@ -111,6 +111,7 @@
 
 
                         <TextView
+
                             android:gravity="center"
                             android:layout_alignParentTop="true"
                             android:layout_alignParentBottom="true"
@@ -119,7 +120,7 @@
                             android:id="@+id/empty_task_list_message"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Currently no tasks in project."
+                            android:text="Currently no members in project."
                             android:textColor="@color/colorAccent" />
 
                     </RelativeLayout>
@@ -141,6 +142,7 @@
                             android:layout_height="match_parent"/>
 
                         <TextView
+                            android:visibility="gone"
                             android:gravity="center"
                             android:layout_alignParentTop="true"
                             android:layout_alignParentBottom="true"
@@ -149,7 +151,7 @@
                             android:id="@+id/empty_members_list_message"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Currently no members in project."
+                            android:text="Currently no tasks in project."
                             android:textColor="@color/colorAccent" />
 
                     </RelativeLayout>
