--- a/app/src/main/res/layout/fragment_add_new_task.xml
+++ b/app/src/main/res/layout/fragment_add_new_task.xml
@@ -36,6 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:hint="Start date"
+                android:focusable="false"
                 android:id="@+id/et_task_start_date"/>
 
 
@@ -45,6 +46,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
+                android:focusable="false"
                 android:hint="End date"
                 android:id="@+id/et_task_end_date"/>
 
@@ -86,6 +88,7 @@
 
 
                 <TextView
+                    android:visibility="gone"
                     android:id="@+id/empty_task_list_message"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
