--- a/app/src/main/res/layout/layout_task_list_item.xml
+++ b/app/src/main/res/layout/layout_task_list_item.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_margin="5dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
-        android:layout_width="70dp"
-        android:layout_height="match_parent"
+        android:layout_width="100dp"
+        android:layout_height="120dp"
         android:elevation="5dp"
         app:cardCornerRadius="5dp"
         app:cardBackgroundColor="@color/colorPrimary"
