--- a/app/src/main/res/layout/layout_colab_list_item.xml
+++ b/app/src/main/res/layout/layout_colab_list_item.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
 
     <androidx.cardview.widget.CardView
         android:layout_margin="4dp"
-        android:elevation="10dp"
-        app:cardCornerRadius="8dp"
+        android:elevation="2dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -20,13 +20,19 @@
 
                 <!--Linear Layout for title and imageview-->
                 <LinearLayout
-                    android:layout_margin="8dp"
+                    android:layout_marginTop="8dp"
+
+                    android:layout_marginRight="8dp"
                     android:weightSum="10"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:textSize="18dp"
+                        android:layout_marginLeft="16dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorPrimaryDark"
                         android:text="Title"
                         android:id="@+id/colab_list_item_title"
                         android:layout_weight="9"
@@ -42,69 +48,119 @@
 
                 </LinearLayout>
 
-                <!--Textview displaying description-->
+
                 <TextView
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginLeft="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/colab_list_item_desc"
+                    android:id="@+id/colab_list_item_creator"
                     android:lines="1"
-                    android:text="@string/sample_desc"
+                    android:text="Created by, Nikhil Agrawal"
+                    android:textSize="14dp"
                   />
 
-                <!--Layout for bottom line-->
-                <LinearLayout
-                    android:layout_margin="8dp"
-                    android:weightSum="10"
-                    android:orientation="horizontal"
+            <LinearLayout
+                android:gravity="left"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    app:srcCompat="@drawable/ic_schedule_accent_24dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_marginLeft="4dp"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/colab_list_item_end_date"
+                    android:text="12/12/2019" />
+
+                <ImageView
+                    android:layout_marginLeft="16dp"
+                    app:srcCompat="@drawable/ic_people_accent_24dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_marginLeft="4dp"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/colab_list_item_total_members"
+                    android:text="4"/>
+
+                <ImageView
+                    android:layout_marginLeft="16dp"
+                    app:srcCompat="@drawable/ic_assignment_accent_24dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/colab_list_item_total_taskss"
+                    android:text="4"/>
+            </LinearLayout>
+
+
+            <ImageView
+                    android:layout_marginTop="4dp"
+                    android:src="@drawable/imageproj1"
+                    android:scaleType="fitXY"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="140dp" />
+            <TextView
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/colab_list_item_desc"
+                android:lines="2"
+                android:textSize="14dp"
+                android:text="lorem dsgjlasdjl sklnflkpoaskf njsn fkn asknfkjn kjnas fksj f jksdfhjk sdf jhsjdf ksjfh aksdj askjdfhakjshf  "
+                />
 
 
-                    <LinearLayout
-                        android:layout_weight="5"
-                        android:orientation="horizontal"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:text="Deadline: "
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/colab_list_item_end_date"
-                            android:text="12/12/2019"
-                        />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_weight="5"
-                        android:orientation="horizontal"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:text="Total members: "
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/colab_list_item_total_members"
-                            android:text="12/12/2019"/>
-
-                    </LinearLayout>
+            <View
+                android:layout_marginTop="4dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray"/>
 
 
+            <LinearLayout
+                android:gravity="right"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                </LinearLayout>
+                <com.google.android.material.button.MaterialButton
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_marginLeft="8dp"
+                    android:text="Details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <com.google.android.material.button.MaterialButton
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_marginLeft="8dp"
+                    android:text="Edit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
 
 
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
